--- a/app.json
+++ b/app.json
@@ -31,6 +31,15 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "1f5747e2-0fe9-491b-970c-16d4eda2fc7d"
+      }
+    },
+    "owner": "nicolasemer"
   }
 }
