--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/react": "~18.2.79",
     "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^18.0.7",
+    "expo-module-scripts": "^3.5.2",
     "jest": "^29.4.0",
     "jest-expo": "^51.0.0",
     "react-test-renderer": "18.2.0",
