--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-font": "~12.0.10",
     "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
+    "expo-location": "^17.0.1",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
@@ -35,6 +36,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-maps": "^1.18.2",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
@@ -42,9 +44,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
+    "@types/expo": "^32.0.13",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.79",
     "@types/react-native": "^0.72.8",
+    "@types/react-native-maps": "^0.24.1",
     "@types/react-test-renderer": "^18.0.7",
     "expo-module-scripts": "^3.5.2",
     "jest": "^29.4.0",
