--- a/package.json
+++ b/package.json
@@ -16,43 +16,45 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^1.24.0",
-    "@react-native-picker/picker": "^2.8.1",
-    "@react-navigation/native": "^6.1.18",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-picker/picker": "2.9.0",
+    "@react-navigation/native": "^7.0.4",
+    "@react-navigation/native-stack": "^7.1.1",
     "@react-navigation/stack": "^6.4.1",
-    "expo": "~51.0.28",
-    "expo-constants": "~16.0.2",
-    "expo-font": "~12.0.10",
-    "expo-image-picker": "~15.0.7",
-    "expo-linking": "~6.3.1",
-    "expo-location": "^17.0.1",
-    "expo-router": "~3.5.23",
-    "expo-splash-screen": "~0.27.5",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-web-browser": "~13.0.3",
+    "expo": "^52.0.11",
+    "expo-constants": "~17.0.3",
+    "expo-font": "~13.0.1",
+    "expo-image-picker": "~16.0.3",
+    "expo-linking": "~7.0.3",
+    "expo-location": "~18.0.2",
+    "expo-router": "~4.0.9",
+    "expo-splash-screen": "~0.29.13",
+    "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "~4.0.4",
+    "expo-web-browser": "~14.0.1",
     "firebase": "^10.13.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-maps": "^1.18.2",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.3",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-maps": "1.18.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "@types/expo": "^32.0.13",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.2.79",
+    "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
     "@types/react-native-maps": "^0.24.1",
     "@types/react-test-renderer": "^18.0.7",
     "expo-module-scripts": "^3.5.2",
     "jest": "^29.4.0",
-    "jest-expo": "^51.0.0",
+    "jest-expo": "~52.0.2",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
